--- a/package.json
+++ b/package.json
@@ -10,29 +10,61 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.0",
-    "@angular/common": "^15.2.0",
-    "@angular/compiler": "^15.2.0",
-    "@angular/core": "^15.2.0",
-    "@angular/forms": "^15.2.0",
-    "@angular/platform-browser": "^15.2.0",
-    "@angular/platform-browser-dynamic": "^15.2.0",
-    "@angular/router": "^15.2.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "@angular/animations": "~13.1.1",
+    "@angular/cdk": "^13.1.1",
+    "@angular/common": "~13.1.1",
+    "@angular/compiler": "~13.1.1",
+    "@angular/core": "~13.1.1",
+    "@angular/fire": "^7.2.0",
+    "@angular/flex-layout": "^13.0.0-beta.36",
+    "@angular/forms": "~13.1.1",
+    "@angular/material": "^13.1.1",
+    "@angular/material-moment-adapter": "^13.1.1",
+    "@angular/platform-browser": "~13.1.1",
+    "@angular/platform-browser-dynamic": "~13.1.1",
+    "@angular/router": "~13.1.1",
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@ngx-translate/core": "^14.0.0",
+    "angular-calendar": "^0.29.0",
+    "angular-imask": "^6.2.2",
+    "angular-oauth2-oidc": "^13.0.1",
+    "core-js": "^3.20.2",
+    "date-fns": "^2.28.0",
+    "firebase": "^9.6.2",
+    "hammerjs": "^2.0.8",
+    "highlight.js": "^11.4.0",
+    "leaflet": "^1.8.0",
+    "luxon": "^2.3.0",
+    "mat-video": "^2.7.2",
+    "moment": "^2.29.1",
+    "ngx-material-timepicker": "^5.5.3",
+    "ngx-toasta": "^2.0.0",
+    "rxjs": "~7.5.1",
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.11",
-    "@angular/cli": "~15.2.11",
-    "@angular/compiler-cli": "^15.2.0",
-    "@types/jasmine": "~4.3.0",
-    "jasmine-core": "~4.5.0",
-    "karma": "~6.4.0",
+    "@angular-devkit/build-angular": "~13.1.2",
+    "@angular/cli": "~13.1.2",
+    "@angular/compiler-cli": "~13.1.1",
+    "@angular/language-service": "~13.1.1",
+    "@types/jasmine": "~3.10.3",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^17.0.8",
+    "jasmine-core": "~4.0.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.3.10",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.4"
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.7.0",
+    "loud-rejection": "^2.2.0",
+    "npm-check-updates": "^12.1.0",
+    "npm-run-all": "^4.1.5",
+    "protractor": "~7.0.0",
+    "read-pkg-up": "^9.0.0",
+    "ts-node": "~10.4.0",
+    "tslint": "~5.20.1",
+    "typescript": "~4.5.4",
+    "url-join": "^4.0.1"
   }
 }
